# base_service

./: .dockerignore  .editorconfig  .env  .env.docker  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml
alembic/: README.md  env.py
alembic/versions/: 001_initial_migration.py  README.md
configs/: README.md  __init__.py  client_config.py  llm_config.py  logging_config.py  service_config.py
demos/: README.md  place_order_demo.py
docs/: EXTENSIBILITY.md  FULFILLMENT_PROOF.md  README.md
logs/: README.md
scripts/: README.md  check_services.py
seed/: README.md  products.json  seed_products.py
src/: README.md  __init__.py  constants.py  container.py  dependencies.py  main.py
src/application/: README.md  __init__.py
src/application/dtos/: README.md  __init__.py  order_dtos.py
src/application/service/: README.md  __init__.py  order_service.py  seed_service.py
src/domain/: README.md  __init__.py  exceptions.py
src/domain/entities/: README.md  __init__.py  order.py  product.py
src/domain/events/: README.md  __init__.py  order_events.py
src/domain/interfaces/: README.md  repositories.py
src/infrastructure/: README.md  __init__.py  schemas.py
src/infrastructure/caching/: README.md  __init__.py  redis_inventory_cache.py
src/infrastructure/clients/: README.md  __init__.py  auth_provider.py  payment_client.py  rabbitmq_client.py  redis_client.py  tcp_socket_client.py
src/infrastructure/messaging/: README.md  __init__.py  rabbitmq_publisher.py
src/infrastructure/migrations/: README.md  __init__.py  vector_db_migration.py
src/infrastructure/models/: README.md  __init__.py  order_model.py  product_model.py
src/infrastructure/repositories/: README.md  __init__.py  order_repository.py  product_repository.py
src/interface/: README.md  __init__.py  schemas.py  worker.py
src/interface/cli/: README.md  __init__.py  main.py
src/interface/grpc/: README.md  __init__.py
src/interface/grpc/interceptors/: __init__.py  logging.py
src/interface/grpc/protos/: order.proto
src/interface/grpc/services/: order_handler.py
src/interface/http/: README.md  __init__.py
src/interface/http/api/: README.md
src/interface/http/api/v1/: README.md  orders.py
src/interface/http/middlewares/: README.md  __init__.py  error_handler.py  logging_middleware.py  redirect.py
src/interface/https/: README.md  __init__.py
src/interface/https/envoy/: envoy.yaml
src/interface/https/haproxy/: haproxy.cfg
src/interface/https/nginx/: ssl_termination.conf
src/interface/https/traefik/: traefik.yaml
src/interface/protocols/: README.md  infrastructure.py  repositories.py  socket.py
static/: README.md
tests/: README.md  conftest.py
tests/integration/: README.md  test_order_flow.py
tests/manual/: README.md  test_concurrency.py
tests/unit/: README.md
tests/unit/application/: test_order_service.py
tests/unit/domain/: test_order.py  test_product.py
tests/unit/infrastructure/: test_auth_provider.py  test_rabbitmq_client.py  test_rabbitmq_publisher.py  test_redis_client.py  test_redis_inventory_cache.py  test_repositories.py
tests/unit/interface/: test_orders_api.py
